proto
syntax = "proto3";

package block_service;

// The Block message represents a block in the blockchain.
message Block {
    string block_hash = 1;         // Hash of the block
    int64 block_number = 2;        // Number of the block
    string timestamp = 3;          // Timestamp of the block
    // Add more fields as necessary, e.g., transactions in the block
}

// The request message for subscribing to blocks.
message SubscribeRequest {
    string filter = 1;             // Optional: filter criteria for the blocks
}

// The response message for sending a transaction.
message TransactionResponse {
    string signature = 1;          // Signature of the sent transaction
    string status = 2;             // Status of the transaction (e.g., success, failure)
}

// The BlockService service definition.
service BlockService {
    // Subscribe to block notifications.
    rpc SubscribeToBlocks(SubscribeRequest) returns (stream Block);
    
    // Send a transaction to transfer SOL.
    rpc SendTransaction(Block) returns (TransactionResponse);
}